--- a/src/App.css
+++ b/src/App.css
@@ -114,3 +114,17 @@
         font-size: 30px;
     }
 }
+
+@media only screen and (max-width: 500px){
+    .card{
+        width: 80%;
+        height: 30%;
+    }
+    .heading{
+        height: 200px;
+        font-size: 20px;
+    }
+    .button{
+        height: 100px;
+    }
+}
